--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -167,6 +167,7 @@
         name=kubelet
         daemon_reload=yes
         state=restarted
+      ignore_errors: yes
 
     - name: restart_kubeproxy
       systemd:
@@ -183,6 +184,11 @@
   - name: Copy kubelet service manifest
     template: src=templates/master-kubelet.service.j2 dest=/etc/systemd/system/kubelet.service
     notify: 
+      - restart_kubelet
+
+  - name: Copy kubelet kubeconfig
+    template: src=templates/kubeconfigs/master-kubelet.conf.j2 dest=/etc/kubernetes/kubeconfigs/kubelet.conf
+    notify:
       - restart_kubelet
 
   - name: Enable kubelet
@@ -260,7 +266,7 @@
       - restart_kubelet
 
   - name: Copy kubelet kubeconfig
-    template: src=templates/kubeconfigs/kubelet.conf.j2 dest=/etc/kubernetes/kubeconfigs/kubelet.conf
+    template: src=templates/kubeconfigs/worker-kubelet.conf.j2 dest=/etc/kubernetes/kubeconfigs/kubelet.conf
     notify: 
       - restart_kubelet
 
