--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -36,6 +36,16 @@
     gpgcheck: true
     state: present
 
+# install docker-selinux package separately to avoid obsoletion errors from newer docker releases
+- name: Remove container-selinux
+  yum:
+    name: container-selinux
+    state: absent
+
+- name: Install docker selinux package
+  environment: "{{ proxy_env }}"
+  shell: "yum -y --setopt=obsoletes=0 install docker-ce-selinux-{{ docker_version }}"
+
 - name: Install required packages
   environment: "{{ proxy_env }}"
   yum: name={{ item }} state=present
