--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -167,6 +167,7 @@
         name=kubelet
         daemon_reload=yes
         state=restarted
+      # on new nodes kublet will not yet be install, ignore errors
       ignore_errors: yes
 
     - name: restart_kubeproxy
@@ -183,7 +184,7 @@
   
   - name: Copy kubelet service manifest
     template: src=templates/master-kubelet.service.j2 dest=/etc/systemd/system/kubelet.service
-    notify: 
+    notify:
       - restart_kubelet
 
   - name: Copy kubelet kubeconfig
