--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -285,7 +285,7 @@
       - heapster.yaml
       - nais.yaml
 
-  - name: Wait for API servver to become available
+  - name: Wait for API server to become available
     wait_for: port=8080 host=127.0.0.1 delay=5
 
   - name: Create addons
