--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -309,6 +309,7 @@
       - traefik.yaml
       - heapster.yaml
       - nais.yaml
+      - debug.yaml
 
   - name: Wait for API server to become available
     wait_for: port=8080 host=127.0.0.1 delay=5
@@ -321,7 +322,7 @@
       - traefik.yaml
       - heapster.yaml
       - nais.yaml
-    ignore_errors: no
+      - debug.yaml
 
   - name: Download helm binaries
     environment: "{{ proxy_env }}"
