restructured roles, adjusted tests and what runs where. passes test-playbook

--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -1,10 +1,15 @@
 ---
-# Common initialization play (webproxy, certificates, repositories)
 - hosts: all
   user: "{{ remote_user }}"
   become: yes
   roles:
-    - common
+    - proxy
+
+- hosts: masters:workers
+  user: "{{ remote_user }}"
+  become: yes
+  roles:
+    - k8s_common
 
 - hosts: masters
   user: "{{ remote_user }}"
@@ -15,28 +20,16 @@
   roles:
     - create_certificates
 
-# Configure kubernetes Master node
-- hosts: masters
+- hosts: etcd
   user: "{{ remote_user }}"
   become: yes
   roles:
     - etcd
 
+- hosts: etcd[0]
+  user: "{{ remote_user }}"
+  become: yes
   tasks:
-
-  - name: Copy certificates
-    copy: src=target/pki/{{ item }} dest=/etc/kubernetes/pki/
-    with_items:
-      - admin.pem
-      - admin-key.pem
-      - ca.pem
-      - ca-key.pem
-      - kube-apiserver-server-key.pem
-      - kube-apiserver-server.pem
-      - sa.key
-      - sa.pub
-
-
   - name: Check if flannel config exists (OK if this fails)
     shell: /usr/bin/etcdctl ls /nais/network/config
     environment:
@@ -51,7 +44,26 @@
       - ETCDCTL_API: 2
     when: flannelconfig.rc != 0
 
-- hosts: all
+# Configure kubernetes Master node
+- hosts: masters
+  user: "{{ remote_user }}"
+  become: yes
+  tasks:
+  - name: Copy certificates
+    copy: src=target/pki/{{ item }} dest=/etc/kubernetes/pki/
+    with_items:
+      - admin.pem
+      - admin-key.pem
+      - ca.pem
+      - ca-key.pem
+      - kube-apiserver-server-key.pem
+      - kube-apiserver-server.pem
+      - sa.key
+      - sa.pub
+
+
+
+- hosts: masters:workers
   user: "{{ remote_user }}"
   become: yes
   tasks:
