--- a/test-playbook.yaml
+++ b/test-playbook.yaml
@@ -1,19 +1,25 @@
 ---
 
+- hosts: etcd
+  user: "{{ remote_user }}"
+  become: yes
+  tasks:
+  - name: Ensure required processes is running
+    shell: /bin/pgrep etcd | wc -l 
+    register: etcd_process_count
+    failed_when: etcd_process_count.stdout != "1"
 
 - hosts: masters
   user: "{{ remote_user }}"
   become: yes
   vars:
-    HOST_COUNT: "{{ groups['all'] | length }}"
+    K8S_HOST_COUNT: "{{ (groups['workers'] | length) + (groups['masters'] | length) }}"
   tasks:
-
     - name: Ensure required processes is running
       shell: /bin/pgrep {{ item }} | wc -l 
       with_items:
         - dockerd
         - kubelet
-        - etcd
       register: process_count
       failed_when: process_count.stdout != "1"
 
@@ -28,7 +34,7 @@
     - name: Verify that all nodes are in Ready-state
       shell: /usr/bin/kubectl get nodes | grep -iw 'Ready' | wc -l 
       register: ready_count
-      failed_when: ready_count.stdout != "{{ HOST_COUNT }}"
+      failed_when: ready_count.stdout != "{{ K8S_HOST_COUNT }}"
 
     - name: Ensure addons are deployed and available
       shell: "/usr/bin/kubectl -n kube-system get deploy {{ item }} -o json | grep '\"availableReplicas\": 1' | wc -l"
@@ -45,7 +51,6 @@
   user: "{{ remote_user }}"
   become: yes
   tasks:
-
     - name: Ensure required processes is running
       shell: /bin/pgrep {{ item }} | wc -l 
       with_items:
@@ -61,4 +66,3 @@
       with_items:
         - docker0
         - flannel.1 
-
