--- a/roles/k8s_common/tasks/main.yml
+++ b/roles/k8s_common/tasks/main.yml
@@ -47,7 +47,7 @@
 
 - name: Docker proxy settings
   template: src=templates/docker-proxy.conf.j2 dest=/etc/systemd/system/docker.service.d/proxy.conf
-  when: proxy_env.http_proxy|default("") != ""
+  when: nais_http_proxy is defined
 
 # Check if sensu-core exist
 - name: Check if sensu core is installed
