--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -45,7 +45,7 @@
     ignore_errors: yes
 
   - name: Set flannel configuration in etcd
-    shell: '/usr/bin/etcdctl mk /nais/network/config  "{ \"Network\": \"{{ pod_network_cidr }}\", \"SubnetLen\": 23, \"Backend\": { \"Type\": \"vxlan\" }}"'
+    shell: '/usr/bin/etcdctl set /nais/network/config  "{ \"Network\": \"{{ pod_network_cidr }}\", \"SubnetLen\": 23, \"Backend\": { \"Type\": \"vxlan\" }}"'
     environment:
       - ETCDCTL_API: 2
     when: flannelconfig.rc != 0
