--- a/teardown-playbook.yaml
+++ b/teardown-playbook.yaml
@@ -105,6 +105,10 @@
       - /usr/bin/flanneld-{{flannel_version}}
       - /run/docker_opts.env
       - /run/flannel/subnet.env
+      - /var/lib/docker
+      - /var/lib/dockershim
+      - /var/lib/kubelet
+      - /var/lib/kubernetes
       - /var/run/docker
       - /var/run/flannel
       - /var/run/kubernetes
