--- a/teardown-playbook.yaml
+++ b/teardown-playbook.yaml
@@ -41,6 +41,16 @@
       shell: /bin/umount /run/docker/netns/*
       ignore_errors: yes
 
+    - name: Get mounted kubelet resources
+      shell: " mount |grep /var/lib/kubelet/pods | cut -d ' ' -f 3 " 
+      register: kubelet_resources
+      ignore_errors: yes
+
+    - name:  umount kubelet resources
+      shell: " umount {{ item }} "
+      when: kubelet_resources.stdout_lines|length > 0
+      with_items: " {{kubelet_resources.stdout_lines }} "
+
 - hosts: masters
   user: "{{ remote_user }}"
   become: yes
