--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -295,8 +295,8 @@
         name=kubelet
         state=restarted
 
-#Common setup for all nodes
-- hosts: all
+# Common setup for all nodes
+- hosts: all:!etcd
   user: "{{ remote_user }}"
   become: yes
 
