Ensure /etc/docker exists.

--- a/roles/k8s_common/tasks/main.yml
+++ b/roles/k8s_common/tasks/main.yml
@@ -4,6 +4,7 @@
     - /etc/kubernetes/kubeconfigs
     - /etc/kubernetes/pki
     - /etc/systemd/system/docker.service.d
+    - /etc/docker
 
 - name: Add kubernetes repository
   yum_repository:
