--- a/files/docker.service
+++ b/files/docker.service
@@ -6,6 +6,7 @@ After=flannel.service
 [Service]
 EnvironmentFile=/var/lib/docker/docker_opts.env
 ExecStart=/usr/bin/dockerd $DOCKER_OPTS --default-ulimit nofile=65536:65536
+ExecStartPost=/sbin/iptables -A FORWARD -i flannel.1 -j ACCEPT
 
 Restart=always
 StartLimitInterval=0
