--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -64,6 +64,8 @@
     with_items:
       - admin.pem
       - admin-key.pem
+      - nais-admin.pem
+      - nais-admin-key.pem
       - ca.pem
       - ca-key.pem
       - kube-apiserver-server-key.pem
@@ -316,9 +318,10 @@
   - name: Generate cluster-admin kubeconfig
     shell: rm -f /etc/kubernetes/kubeconfigs/cluster-admin.conf &&
            /usr/bin/kubectl config set-cluster {{ cluster_name }} --server=https://{{ groups['masters'][0] }}:6443 --certificate-authority=/etc/kubernetes/pki/ca.pem --embed-certs=true --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf &&
-           /usr/bin/kubectl config set-credentials {{ cluster_name }}-cluster-admin --client-certificate=/etc/kubernetes/pki/nais-admin.pem --client-key=/etc/kubernetes/pki/nais-admin-key.pem --embed-certs --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf &&
+           /usr/bin/kubectl config set-credentials {{ cluster_name }}-cluster-admin --client-certificate=/etc/kubernetes/pki/admin.pem --client-key=/etc/kubernetes/pki/admin-key.pem --embed-certs --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf &&
            /usr/bin/kubectl config set-context {{ cluster_name }} --cluster={{ cluster_name }} --user={{ cluster_name }}-cluster-admin --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf &&
            /usr/bin/kubectl config use-context {{ cluster_name }} --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf
+
 
   - name: Wait for API server to become available
     wait_for: port=6443 host={{ groups['masters'][0] }} delay=15 timeout=120
@@ -341,6 +344,9 @@
   - name: Ensure addons directory exists
     file: state=directory path=/etc/kubernetes/addons
 
+  - name: Ensure roles directory exists
+    file: state=directory path=/etc/kubernetes/roles
+
   - name: Copy kubernetes-addons manifest templates
     template: src=templates/addons/{{ item }}.j2 dest=/etc/kubernetes/addons/{{ item }}
     with_items:
@@ -351,8 +357,27 @@
       - nais.yaml
       - debug.yaml
 
+  - name: Copy kubernetes templates
+    template: src=templates/roles/{{ item }}.j2 dest=/etc/kubernetes/roles/{{ item }}
+    with_items:
+      - roles.yaml
+      - rolebindings.yaml
+
+  - name: Generate nais-admin kubeconfig
+    shell: rm -f /etc/kubernetes/kubeconfigs/nais-admin.conf &&
+           /usr/bin/kubectl config set-cluster {{ cluster_name }} --server=https://{{ groups['masters'][0] }}:6443 --certificate-authority=/etc/kubernetes/pki/ca.pem --embed-certs=true --kubeconfig=/etc/kubernetes/kubeconfigs/nais-admin.conf &&
+           /usr/bin/kubectl config set-credentials {{ cluster_name }}-cluster-admin --client-certificate=/etc/kubernetes/pki/nais-admin.pem --client-key=/etc/kubernetes/pki/nais-admin-key.pem --embed-certs --kubeconfig=/etc/kubernetes/kubeconfigs/nais-admin.conf &&
+           /usr/bin/kubectl config set-context {{ cluster_name }} --cluster={{ cluster_name }} --user={{ cluster_name }}-cluster-admin --kubeconfig=/etc/kubernetes/kubeconfigs/nais-admin.conf
+
   - name: Wait for API server to become available
     wait_for: port=8080 host=127.0.0.1 delay=5
+
+
+  - name: Create role and rolebindings
+    shell: /usr/bin/kubectl apply -f /etc/kubernetes/roles/{{ item }}
+    with_items:
+    - roles.yaml
+    - rolebindings.yaml
 
   - name: Create addons
     shell: /usr/bin/kubectl apply -f /etc/kubernetes/addons/{{ item }}
