remove old nais-admin role

--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -374,7 +374,7 @@
   - name: Wait for API server to become available
     wait_for: port=8080 host=127.0.0.1 delay=5
 
-  - name: Delete nais-admin role if this exists (TODO: remove after all clusters have been updated)
+  - name: Delete nais-admin role if this exists (TODO remove after all clusters have been updated)
     shell: /usr/bin/kubectl delete clusterrolebinding nais-admin
     ignore_errors: yes
 
