--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -356,20 +356,22 @@
       - debug.yaml
 
 
-  - name: Copy kubernetes clusterroles and clusterrolebindings templates
+  - name: Copy kubernetes roles
     template: src=templates/roles/{{ item }}.j2 dest=/etc/kubernetes/roles/{{ item }}
     with_items:
       - clusterroles.yaml
       - clusterrolebindings.yaml
+      - leaderelectionbindings.yaml
 
   - name: Wait for API server to become available
     wait_for: port=8080 host=127.0.0.1 delay=5
 
-  - name: Create clusterrole and clusterrolebindings
+  - name: Apply kubernetes roles
     shell: /usr/bin/kubectl apply -f /etc/kubernetes/roles/{{ item }}
     with_items:
-    - clusterroles.yaml
-    - clusterrolebindings.yaml
+      - clusterroles.yaml
+      - clusterrolebindings.yaml
+      - leaderelectionbindings.yaml
 
   - name: Create addons
     shell: /usr/bin/kubectl apply -f /etc/kubernetes/addons/{{ item }}
