Reert "Set max size for docker container log files."
This reverts commit 09366458bd5fc1d53d39b426bd6e9c3c02be358d.

--- a/files/docker.service
+++ b/files/docker.service
@@ -5,7 +5,7 @@ After=flannel.service
 
 [Service]
 EnvironmentFile=/var/lib/docker/docker_opts.env
-ExecStart=/usr/bin/dockerd $DOCKER_OPTS --default-ulimit nofile=65536:65536 --log-opt max-size=100m
+ExecStart=/usr/bin/dockerd $DOCKER_OPTS --default-ulimit nofile=65536:65536
 ExecStartPost=/sbin/iptables -A FORWARD -i flannel.1 -j ACCEPT
 
 Restart=always
