--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -355,12 +355,12 @@
       - nais.yaml
       - debug.yaml
 
-
   - name: Copy kubernetes clusterroles and clusterrolebindings templates
-    template: src=templates/roles/{{ item }}.j2 dest=/etc/kubernetes/roles/{{ item }}
+    file: src=files/roles/{{ item }} dest=/etc/kubernetes/roles/{{ item }}
     with_items:
       - clusterroles.yaml
       - clusterrolebindings.yaml
+      - leaderelectionbindings.yaml
 
   - name: Wait for API server to become available
     wait_for: port=8080 host=127.0.0.1 delay=5
@@ -370,6 +370,7 @@
     with_items:
     - clusterroles.yaml
     - clusterrolebindings.yaml
+    - leaderelectionbindings.yaml
 
   - name: Create addons
     shell: /usr/bin/kubectl apply -f /etc/kubernetes/addons/{{ item }}
