--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -84,6 +84,8 @@
            mv /tmp/mk-docker-opts.sh /usr/libexec
     args:
       creates: /usr/bin/flanneld-{{flannel_version}}
+    tags:
+      - skip_ansible_lint
 
   - name: Symlink flannel
     file: src=/usr/bin/flanneld-{{flannel_version}} dest=/usr/bin/flanneld state=link
@@ -144,6 +146,7 @@
       creates: /usr/bin/kubelet-{{k8s_version}}
     tags:
       - dev
+      - skip_ansible_lint
 
   - name: Symlink kubernetes node binaries
     file: src=/usr/bin/{{ item }}-{{ k8s_version }} dest=/usr/bin/{{ item }} state=link force=yes
@@ -182,6 +185,8 @@
   - name: Clean up /etc/hosts after puppet
     shell: /bin/sed -i "s/$(/sbin/ifconfig docker0 | grep inet | awk '{print $2}')/$(/sbin/ifconfig $(ls /sys/class/net/ | grep en) | grep inet | awk '{print $2}')/g" /etc/hosts
     when: puppet_agent_rpm_check.rc == 0
+    tags:
+      - skip_ansible_lint
 
   handlers:
     - name: restart_docker
