Skipping for lint check, use old rpm q

--- a/roles/k8s_common/tasks/main.yml
+++ b/roles/k8s_common/tasks/main.yml
@@ -57,6 +57,8 @@
   command: rpm -q sensu
   ignore_errors: yes
   register: sensu_rpm_check
+  tags:
+    - skip_ansible_lint
 
 # Check if puppet-agent exist
 - name: Check if puppet is installed
