Skipping for lint check, use old rpm q

--- a/roles/k8s_common/tasks/main.yml
+++ b/roles/k8s_common/tasks/main.yml
@@ -65,6 +65,8 @@
   command: rpm -q puppet
   ignore_errors: yes
   register: puppet_agent_rpm_check
+  tags:
+    - skip_ansible_lint
 
 - name: Disable puppet agent
   command: /bin/puppet agent --disable
