--- a/teardown-playbook.yaml
+++ b/teardown-playbook.yaml
@@ -8,7 +8,7 @@
     file: path=/etc/pki/ca-trust/source/anchors/webproxy.crt state=absent
 
   - name: update_cert_index
-    shell: /usr/bin/update-ca-trust
+    command: /usr/bin/update-ca-trust
     changed_when: false
 
 - hosts: masters:workers
@@ -26,7 +26,7 @@
         state: absent
 
     - name: Stop services
-      shell: timeout 15 /bin/systemctl stop {{ item }}
+      command: timeout 15 /bin/systemctl stop {{ item }}
       with_items:
         - kubelet
         - docker
@@ -34,7 +34,7 @@
       changed_when: false
 
     - name: Disable services
-      shell: timeout 15 /bin/systemctl disable {{ item }}
+      command: timeout 15 /bin/systemctl disable {{ item }}
       with_items:
         - kubelet
         - docker
@@ -55,7 +55,7 @@
         - /etc/docker
 
     - name: Unmount docker resources
-      shell: /bin/umount {{ item }}
+      command: /bin/umount {{ item }}
       with_items:
         - /run/docker/netns/*
         - /var/lib/docker/overlay
@@ -63,13 +63,15 @@
       changed_when: false
 
     - name: Get mounted kubelet resources
-      shell: " mount |grep /var/lib/kubelet/pods | cut -d ' ' -f 3 "
+      shell: "mount | grep /var/lib/kubelet/pods | cut -d ' ' -f 3"
       register: kubelet_resources
       ignore_errors: yes
       changed_when: false
+      tags:
+        - skip_ansible_lint
 
     - name:  umount kubelet resources
-      shell: " umount {{ item }} "
+      command: "umount {{ item }}"
       when: kubelet_resources.stdout_lines|length > 0
       with_items: "{{ kubelet_resources.stdout_lines }}"
 
@@ -78,7 +80,7 @@
   become: yes
   tasks:
     - name: Remove files
-      file: path={{ item }} state=absent
+      file: path={{ item }} state=absent
       with_items:
         - /root/.helm/repository/repositories.yaml
         - /usr/bin/helm-{{helm_version}}
@@ -157,12 +159,12 @@
       - /run/kubernetes
 
   - name: Remove docker interface
-    shell: ip link delete docker0
+    command: ip link delete docker0
     ignore_errors: yes
     changed_when: false
 
   - name: Remove flannel interface
-    shell: ip link delete flannel.1
+    command: ip link delete flannel.1
     ignore_errors: yes
     changed_when: false
 
