--- a/files/istio/istio-sidecar-injector-configmap-release.yaml
+++ b/files/istio/istio-sidecar-injector-configmap-release.yaml
@@ -7,7 +7,7 @@ metadata:
 apiVersion: v1
 data:
   config: |
-    policy: enabled
+    policy: disabled
     template: |-
       initContainers:
       - name: istio-init
